# inflection

./: .gitignore  .travis.yml  CHANGES.rst  HISTORY.rst  LICENSE  MANIFEST.in  README.rst  dev_requirements.txt  inflection.py  requirements.txt  setup.cfg  setup.py  test_inflection.py  tox.ini
docs/: Makefile  api.rst  conf.py  index.rst
inflection/: __init__.py
