[flake8]
exclude=docs/*

[isort]
skip=.tox,docs

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[mypy]
disallow_any_decorated = True
disallow_any_explicit = True
warn_unreachable = True
# options from __strict
warn_unused_configs = True
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
no_implicit_reexport = True
strict_equality = True

[mypy-test_inflection]
# Ignore test_inflection.py as pytest is not type hinted
ignore_errors = True
