[metadata]
license_file = LICENSE
name = inflection
author = Janne Vanhala
author_email = janne.vanhala@gmail.com
license = MIT
description = A port of Ruby on Rails inflector to Python
url = https://github.com/jpvanhal/inflection
long_description = file: README.rst
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = inflection
zip_safe = False
python_requires = >=3.5

[options.package_data]
inflection = py.typed

[flake8]
exclude = docs/*

[isort]
skip = .tox,docs

[mypy]
disallow_any_decorated = True
disallow_any_explicit = True
warn_unreachable = True
# options from __strict
warn_unused_configs = True
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
no_implicit_reexport = True
strict_equality = True

[mypy-test_inflection]
# Ignore test_inflection.py as pytest is not type hinted
ignore_errors = True
